# haskell-GraphLib

./: .gitattributes  LICENSE  README.md  build.sh  haskell-GraphLib.cabal
app/: Main.hs
input/: digraph1.plain  digraph2.plain  digraph3.plain  digraph4.plain  digraph5.plain  digraph6.plain  digraph7.plain  digraph8.plain  graph1.plain  graph2.plain  graph3.plain  graph4.plain  graph5.plain  graph6.plain  graph7.plain  graph8.plain
src/: Edge.hs  Graph.hs  Main.hs  Parser.hs  Vertex.hs
tst/unit/: EdgeSpec.hs  GraphSpec.hs  ParserSpec.hs  VertexSpec.hs
