name:                haskell-GraphLib
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-GraphLib#readme
license:             BSD3
license-file:        LICENSE
author:              Constantin Ruhdorfer
copyright:           2019 Constantin Ruhdorfer
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-GraphLib
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       
    base >= 4.7 && < 5
  other-modules:       Vertex Edge Graph
