name:                haskell-GraphLib
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-GraphLib#readme
license:             BSD3
license-file:        LICENSE
author:              Constantin Ruhdorfer
copyright:           2019 Constantin Ruhdorfer
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-GraphLib
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5, haskell-GraphLib

library
  exposed-modules:     Vertex, Edge, Graph, Parser
  build-depends:       base >= 4.7 && < 5
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite unit-tests
  type:                exitcode-stdio-1.0
  main-is:             Spec.hs
  hs-source-dirs:      tst/unit
  other-modules:       EdgeSpec, GraphSpec, ParserSpec, VertexSpec
  build-depends:       base
                       , haskell-GraphLib
                       , hspec
                       , hspec-discover
